apps/parser/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: norma-parser
  labels:
    app: norma-parser
    environment: production
