apps/parser/kubernetes/parser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: parser-api-service
  namespace: norma
  labels:
    app: parser-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: parser-api
